updated the .htm versions of the help files (now that we also install Firefox if selected, we have to use those over the .mth files)

--- a/redist/Help/AdaptIt_Plug-in_About_box_files/header.htm
+++ b/redist/Help/AdaptIt_Plug-in_About_box_files/header.htm
@@ -1,14 +1,15 @@
 <html xmlns:v="urn:schemas-microsoft-com:vml"
 xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:w="urn:schemas-microsoft-com:office:word"
+xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=us-ascii">
 <meta name=ProgId content=Word.Document>
-<meta name=Generator content="Microsoft Word 11">
-<meta name=Originator content="Microsoft Word 11">
-<link id=Main-File rel=Main-File href="../AdaptIt%20Plug-in%20About%20box.htm">
+<meta name=Generator content="Microsoft Word 15">
+<meta name=Originator content="Microsoft Word 15">
+<link id=Main-File rel=Main-File href="../AdaptIt_Plug-in_About_box.htm">
 </head>
 
 <body lang=EN-US link=blue vlink=purple>
