missed an image...

--- a/redist/Help/Google_Translate_Plug-in_About_box.htm
+++ b/redist/Help/Google_Translate_Plug-in_About_box.htm
@@ -1833,7 +1833,7 @@ which the converter will be known in client applications:</p>
  <v:imagedata src="Google_Translate_Plug-in_About_box_files/image011.png"
   o:title="Graphical user interface, text, application&#10;&#10;Description automatically generated"/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=465 height=135
-src="Google_Translate_Plug-in_About_box_files/image001.jpg"
+src="Google_Translate_Plug-in_About_box_files/image011.png"
 alt="Graphical user interface, text, application&#10;&#10;Description automatically generated"
 v:shapes="Picture_x0020_6"><![endif]></span></p>
 
