removed now obsolete image from Bing About html file (and merge module)

--- a/redist/Help/Bing_Translator_Plug-in_About_box.htm
+++ b/redist/Help/Bing_Translator_Plug-in_About_box.htm
@@ -2049,7 +2049,7 @@ the <b>Save in System Repository</b> button.</p>
 style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape id="_x0000_i1027" type="#_x0000_t75"
  alt="Graphical user interface, text, application&#10;&#10;Description automatically generated"
  style='width:348.75pt;height:101.25pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="Bing_Translator_Plug-in_About_box_files/image002.png"
+ <v:imagedata src="Bing_Translator_Plug-in_About_box_files/image003.jpg"
   o:title="Graphical user interface, text, application&#10;&#10;Description automatically generated"/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=465 height=135
 src="Bing_Translator_Plug-in_About_box_files/image003.jpg"
