fix the title of the DeepL and Google Translate About pages (they were copied from Bing and still had the Bing name in it)

--- a/redist/Help/Google_Translate_Plug-in_About_box.htm
+++ b/redist/Help/Google_Translate_Plug-in_About_box.htm
@@ -21,7 +21,7 @@ w\:* {behavior:url(#default#VML);}
 .shape {behavior:url(#default#VML);}
 </style>
 <![endif]-->
-<title>Bing Translator</title>
+<title>Google Translate</title>
 <!--[if gte mso 9]><xml>
  <o:DocumentProperties>
   <o:Author>Bob Eaton</o:Author>
