be sure to add  /target="_blank"/ after any <a href> elements, so it doesn't try to navigate to the website in situ. This causes it to launch off to the default web browser

--- a/redist/Help/AdaptIt_Plug-in_About_box.htm
+++ b/redist/Help/AdaptIt_Plug-in_About_box.htm
@@ -1935,7 +1935,7 @@ margin-left:1.0in;margin-right:63.0pt'>
 margin-left:0in'>Note that these menu items will be grayed out (as here) unless
 you have EncConverters v 2.2 installed on your system. This utility is
 available as part of FieldWorks 3.1 or it can be downloaded from this website: <span
-class=MsoHyperlink><a href="http://scripts.sil.org/EncCnvtrs">http://scripts.sil.org/EncCnvtrs</a></span></p>
+class=MsoHyperlink><a href="http://scripts.sil.org/EncCnvtrs" target="_blank">http://scripts.sil.org/EncCnvtrs</a></span></p>
 
 </div>
 
