--- a/redist/Help/Bing_Translator_Plug-in_About_box.htm
+++ b/redist/Help/Bing_Translator_Plug-in_About_box.htm
@@ -1747,7 +1747,7 @@ style='mso-bookmark:_Ref89940713'>Transliterate &#8211; Supports the translitera
 of characters of the selected Source language to the corresponding characters
 or letters of the selected Target language script. Note: not all Source
 languages support Transliteration. See </span><a
-href="https://docs.microsoft.com/en-us/azure/cognitive-services/translator/language-support#transliteration"><span
+href="https://docs.microsoft.com/en-us/azure/cognitive-services/translator/language-support#transliteration" target="_blank"><span
 style='mso-bookmark:_Ref89940713'>this</span><span style='mso-bookmark:_Ref89940713'></span></a><span
 style='mso-bookmark:_Ref89940713'> table to know whether a certain combination
 is supported. The Source script (</span><!--[if supportFields]><span
