--- a/redist/Help/CC_Table_Plug-in_About_box.htm
+++ b/redist/Help/CC_Table_Plug-in_About_box.htm
@@ -1631,7 +1631,7 @@ name=SpellFixer></a><![if !supportLists]><span style='mso-bookmark:_Ref133740898
 style='mso-list:Ignore'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='mso-bookmark:_Ref133740898'>If
 you've installed the SpellFixer plug-in (as part of the </span><a
-href="http://scripts.sil.org/EncCnvtrs"><span style='mso-bookmark:_Ref133740898'>SILConverters</span><span
+href="http://scripts.sil.org/EncCnvtrs" target="_blank"><span style='mso-bookmark:_Ref133740898'>SILConverters</span><span
 style='mso-bookmark:_Ref133740898'></span></a><span style='mso-bookmark:_Ref133740898'>
 download), the </span><span style='mso-bookmark:_Ref133740898'><span
 class=userinterface>Add or Edit a SpellFixer CC Table</span> button will be
