--- a/redist/Help/DeepL_Translator_Plug-in_About_box.htm
+++ b/redist/Help/DeepL_Translator_Plug-in_About_box.htm
@@ -1818,7 +1818,7 @@ to test it before trying it with real data.</p>
 "Times New Roman"'>Entering your own DeepL Translator resource:<o:p></o:p></span></h4>
 
 <p class=MsoBodyText>Once you acquire your own API key from the <a
-href="https://www.deepl.com/pro?cta=header-pro/">DeepL website</a>,<span
+href="https://www.deepl.com/pro?cta=header-pro/" target="_blank">DeepL website</a>,<span
 style='mso-spacerun:yes'>&nbsp; </span>you can enter it using the dialog that
 appears by clicking the button on the Setup dialog (<!--[if supportFields]><span
 style='mso-element:field-begin'></span> REF _Ref89954138 \r \h <span
