--- a/redist/Help/Google_Translate_Plug-in_About_box.htm
+++ b/redist/Help/Google_Translate_Plug-in_About_box.htm
@@ -1788,7 +1788,7 @@ to test it before trying it with real data.</p>
 
 <p class=MsoBodyText>Once you acquire your own API key (a json message) for a
 Google Cloud Service Account from the <a
-href="https://cloud.google.com/translation-hub/docs/admin-setup">Google website</a>,<span
+href="https://cloud.google.com/translation-hub/docs/admin-setup" target="_blank">Google website</a>,<span
 style='mso-spacerun:yes'>&nbsp; </span>you can enter it using the dialog that
 appears by clicking the button on the Setup dialog (<!--[if supportFields]><span
 style='mso-element:field-begin'></span> REF _Ref89954138 \r \h <span
