--- a/redist/Help/ICU_Boundary_Analysis-Break_Iterator_Converter_About_box.htm
+++ b/redist/Help/ICU_Boundary_Analysis-Break_Iterator_Converter_About_box.htm
@@ -1480,7 +1480,7 @@ analysis, and you can use this transducer to break up, for example, a long
 string of Thai text and spaces will be inserted between word forms. </p>
 
 <p class=MsoBodyText>See <a
-href="http://userguide.icu-project.org/boundaryanalysis">http://userguide.icu-project.org/boundaryanalysis</a>
+href="http://userguide.icu-project.org/boundaryanalysis" target="_blank">http://userguide.icu-project.org/boundaryanalysis</a>
 for more details on the capabilities for this ICU transducer.</p>
 
 <h3><span style='mso-fareast-font-family:"Times New Roman"'>Setup Tab<o:p></o:p></span></h3>
