--- a/redist/Help/ICU_Converters_Plug-in_About_box.htm
+++ b/redist/Help/ICU_Converters_Plug-in_About_box.htm
@@ -642,7 +642,7 @@ bidirectional reordering after a conversion to Unicode or before a conversion
 from Unicode.</p>
 
 <p class=MsoBodyText>See <a
-href="http://icu.sourceforge.net/userguide/conversion.html">http://icu.sourceforge.net/userguide/conversion.html</a>
+href="http://icu.sourceforge.net/userguide/conversion.html" target="_blank">http://icu.sourceforge.net/userguide/conversion.html</a>
 for more details on ICU converters.</p>
 
 <h3>Setup Tab</h3>
