--- a/redist/Help/ICU_Regular_Expression_Plug-in_About_box.htm
+++ b/redist/Help/ICU_Regular_Expression_Plug-in_About_box.htm
@@ -1510,7 +1510,7 @@ Processor (ICU)<o:p></o:p></span></h2>
 <p class=MsoBodyText>ICU's Regular Expressions package provides applications
 with the ability to apply regular expression matching to Unicode string data. The
 regular expression patterns and behavior are based on Perl's regular
-expressions. See <a href="http://icu.sourceforge.net/userguide/regexp.html">http://icu.sourceforge.net/userguide/regexp.html</a>
+expressions. See <a href="http://icu.sourceforge.net/userguide/regexp.html" target="_blank">http://icu.sourceforge.net/userguide/regexp.html</a>
 for more details on the syntax of ICU Regular Expressions. </p>
 
 <h3><a name="_Regular_Expression_Metacharacters"></a><span style='mso-fareast-font-family:
@@ -1818,7 +1818,7 @@ configured here.</p>
   color:black;mso-color-alt:windowtext'>Match if the current position is a word
   boundary. Boundaries occur at the transitions between word (\w) and non-word
   (\W) characters, with combining marks ignored. For better word boundaries,
-  see <a href="http://icu.sourceforge.net/userguide/boundaryAnalysis.html"><span
+  see <a href="http://icu.sourceforge.net/userguide/boundaryAnalysis.html" target="_blank"><span
   style='mso-ascii-font-family:Arial;mso-hansi-font-family:Arial'>ICU Boundary
   Analysis</span></a> . </span><span style='font-size:10.0pt;font-family:"Arial",sans-serif'><o:p></o:p></span></p>
   </td>
@@ -2157,7 +2157,7 @@ configured here.</p>
   <td style='background:#EEEEEE;padding:.75pt .75pt .75pt .75pt'>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Arial",sans-serif;
   color:black;mso-color-alt:windowtext'>Match a <a
-  href="http://www.unicode.org/unicode/reports/tr29/#Grapheme_Cluster_Boundaries"><span
+  href="http://www.unicode.org/unicode/reports/tr29/#Grapheme_Cluster_Boundaries" target="_blank"><span
   style='mso-ascii-font-family:Arial;mso-hansi-font-family:Arial'>Grapheme
   Cluster</span></a> . </span><span style='font-size:10.0pt;font-family:"Arial",sans-serif'><o:p></o:p></span></p>
   </td>
@@ -2215,7 +2215,7 @@ configured here.</p>
   <td style='background:#EEEEEE;padding:.75pt .75pt .75pt .75pt'>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Arial",sans-serif;
   color:black;mso-color-alt:windowtext'>Match any one character from the set.
-  See <a href="http://icu.sourceforge.net/userguide/unicodeSet.html"><span
+  See <a href="http://icu.sourceforge.net/userguide/unicodeSet.html" target="_blank"><span
   style='mso-ascii-font-family:Arial;mso-hansi-font-family:Arial'>UnicodeSet</span></a>
   for a full description of what may appear in the pattern </span><span
   style='font-size:10.0pt;font-family:"Arial",sans-serif'><o:p></o:p></span></p>
