--- a/redist/Help/ICU_Transliterators_Plug-in_About_box.htm
+++ b/redist/Help/ICU_Transliterators_Plug-in_About_box.htm
@@ -1474,7 +1474,7 @@ standard defined romanization scheme for Indic data), or write custom transform
 rules to process text data. </p>
 
 <p class=MsoBodyText>See <a
-href="http://icu.sourceforge.net/userguide/Transform.html">http://icu.sourceforge.net/userguide/Transform.html</a>
+href="http://icu.sourceforge.net/userguide/Transform.html" target="_blank">http://icu.sourceforge.net/userguide/Transform.html</a>
 for more details on the use and syntax of ICU Transliterators.</p>
 
 <h3><span style='mso-fareast-font-family:"Times New Roman"'>Setup Tab<o:p></o:p></span></h3>
