--- a/redist/Help/Perl_Expression_Plug-in_About_box.htm
+++ b/redist/Help/Perl_Expression_Plug-in_About_box.htm
@@ -742,9 +742,9 @@ margin-left:0in'>The SILConverters' Perl Expression converter requires a
 separately downloaded Perl distribution (currently, version 5.10.1) to be
 installed on your system to operate correctly. You can download a free Perl
 distribution, such as ActiveState&#8217;s Perl v5.10.1 from this website: <span
-class=MsoHyperlink><a href="http://www.activestate.com/activeperl/">Active State</a></span>
+class=MsoHyperlink><a href="http://www.activestate.com/activeperl/" target="_blank">Active State</a></span>
 (or perhaps in their previous downloads <a
-href="http://downloads.activestate.com/ActivePerl/Windows/5.10/">area</a>).</p>
+href="http://downloads.activestate.com/ActivePerl/Windows/5.10/" target="_blank">area</a>).</p>
 
 </div>
 
