--- a/redist/Help/Python_Script_Plug-in_About_box.htm
+++ b/redist/Help/Python_Script_Plug-in_About_box.htm
@@ -1213,7 +1213,7 @@ margin-left:1.0in;margin-right:63.0pt'>
 margin-left:0in'>To use this transduction processor, you must have a Python
 distribution (v. 2.7) installed on your machine. You can download free Python
 distributions, such as <span class=SpellE>ActivePython</span> 2.7 from <a
-href="http://www.activestate.com/activepython/downloads"><span class=SpellE>ActivePython</span></a>.</p>
+href="http://www.activestate.com/activepython/downloads" target="_blank"><span class=SpellE>ActivePython</span></a>.</p>
 
 </div>
 
